--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
+    <script data-ad-client="ca-pub-8513941550517443" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 
 </head>
@@ -36,9 +38,18 @@
                 </li>
                 <div class="barravertical"></div>
                 <li class="linhas-menu"><a href="#contatos">Contato</a></li>
+            </ul>
 
+
+            <ul class="menu-mobile">
+                <li><i class="far fa-caret-square-down" onclick="mudar()"></i></li>
+                <ul class="sub">
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Copyright</a></li>
+                    <li><a href="#">Design</a></li>
+                </ul>
+            </ul>
         </div>
-
         <section>
             <div class="subcabecalho">
                 <div class="subtitle">
@@ -54,9 +65,9 @@
 
     <section>
         <div id="galeria" class="container-galeria">
-    
+
             <figure class="imagem">
-                <a href="background/skycastle.jpg">
+                <a href="background/skycastle.jpg" target="_blank">
                     <img class="foto" src="background/skycastle.jpg" alt="Castelo nas nuvens">
                 </a>
                 <figcaption>
@@ -65,7 +76,7 @@
             </figure>
 
             <figure class="imagem">
-                <a href="background/lost-in-the-space-com-camera-raw---Copia.jpg">
+                <a href="background/lost-in-the-space-com-camera-raw---Copia.jpg" target="_blank">
                     <img class="foto" src="background/lost-in-the-space-com-camera-raw---Copia.jpg"
                         alt="homen em um foguete">
                 </a>
@@ -75,7 +86,7 @@
             </figure>
 
             <figure class="imagem">
-                <a target="_blank" href="background/skate-mar-aberto.jpg">
+                <a target="_blank" href="background/skate-mar-aberto.jpg" target="_blank">
                     <img class="foto" src="background/skate-mar-aberto.jpg" alt="skate no mar">
                 </a>
                 <figcaption>
@@ -84,7 +95,7 @@
             </figure>
 
             <figure class="imagem">
-                <a href="background/medieval.jpg">
+                <a href="background/medieval.jpg" target="_blank">
                     <img class="foto" src="background/medieval.jpg" alt="Medieval">
                 </a>
                 <figcaption>
@@ -93,7 +104,7 @@
             </figure>
 
             <figure class="imagem">
-                <a href="background/florest2.jpg">
+                <a href="background/florest2.jpg" target="_blank">
                     <img class="foto" src="background/florest2.jpg" alt="Mulher observando uma fogueira">
                 </a>
                 <figcaption>
@@ -102,7 +113,7 @@
             </figure>
 
             <figure class="imagem">
-                <a href="background/magicselect.jpg">
+                <a href="background/magicselect.jpg" target="_blank">
                     <img class="foto" src="background/magicselect.jpg" alt="Magia">
                 </a>
                 <figcaption>
