--- a/index.html
+++ b/index.html
@@ -21,13 +21,7 @@
             <a href="index.html"> <img src="logos/mug_coffee.png" alt="logo"></a>
 
             <ul class="menu">
-                <li class="linhas-menu"><a href="sobre.html">Sobre</a>
-                    <ul>
-                        <li><a href="#">Agradecimentos</a></li>
-                    </ul>
 
-                </li>
-                <div class="barravertical"></div>
                 <li class="linhas-menu"><a href="#galeria">Galeria</a>
                     <ul>
                         <li><a href="#">Paisagens</a></li>
@@ -36,7 +30,10 @@
                     </ul>
                 </li>
                 <div class="barravertical"></div>
-                <li class="linhas-menu"><a href="#contatos">Contato</a></li>
+                <li class="linhas-menu"><a href="#">Agradecimentos</a></li>
+                <div class="barravertical"></div>
+                <li class="linhas-menu"><a href="sobre.html">Sobre</a></li>
+
             </ul>
 
 
@@ -55,51 +52,62 @@
                     <h1>Sejam bem-vindos ao universo da imaginação<span class="barra">!</span></h1>
                 </div>
             </div>
+
+            </div>
         </section>
     </header>
 
     </div>
-    <!--Começo da galeria de imagens-->
 
+    <div class="destaque">
+        <span>Fotos em destaque</span>    
+    </div>
+
+    <!--Começo da galeria de imagens-->
 
     <section>
         <div id="galeria" class="container-galeria">
 
             <ul class="galeria">
 
-                <li><a href="background/florest2.jpg"><img class="foto" src="background/florest2.jpg"
+                <li><a href="background/slien-cat.jpg" target="_blank"><img class="foto" src="background/slien-cat.jpg"
+                            alt="Gato sendo abduzido" /></a>
+                    <p>Abdução.</p>
+                </li>
+
+                <li><a href="background/florest2.jpg" target="_blank"><img class="foto" src="background/florest2.jpg"
                             alt="Mulher observando uma fogueira" /></a>
                     <p>Olhar atento.</p>
                 </li>
 
-                <li><a href="background/lost-in-the-space-com-camera-raw---Copia.jpg"><img class="foto"
+                <li><a href="background/lost-in-the-space-com-camera-raw---Copia.jpg" target="_blank"><img class="foto"
                             src="background/lost-in-the-space-com-camera-raw---Copia.jpg"
                             alt="Homen sentado em um foguete" /></a>
                     <p>Para o Alto e Avante!</p>
                 </li>
 
-                <li><a href="background/medieval.jpg"><img class="foto" src="background/medieval.jpg"
+                <li><a href="background/medieval.jpg" target="_blank"><img class="foto" src="background/medieval.jpg"
                             alt="olhando pela janela" /></a>
                     <p>Apreciando a vista da janela mais alta de Hogwarts</p>
                 </li>
 
-                <li><a href="background/magicselect.jpg"><img class="foto" src="background/magicselect.jpg"
+                <li><a href="background/magicselect.jpg" target="_blank"><img class="foto" src="background/magicselect.jpg"
                             alt="image" /></a>
                     <p>Crianças, a ficção é a verdade dentro da mentira, e a verdade desta ficção é bem simples: a magia
                         existe.</p>
                 </li>
 
-                <li><a href="background/skate-mar-aberto.jpg"><img class="foto" src="background/skate-mar-aberto.jpg"
+                <li><a href="background/skate-mar-aberto.jpg" target="_blank"><img class="foto" src="background/skate-mar-aberto.jpg"
                             alt="Andando de skate no mar" /></a>
                     <p>Skate é criatividade.</p>
                 </li>
 
-                <li><a href="background/spacecar.jpg"><img class="foto" src="background/spacecar.jpg"
+                <li><a href="background/spacecar.jpg" target="_blank"><img class="foto" src="background/spacecar.jpg"
                             alt="Carro no espaço" /></a>
                     <p>Carro espacial.</p>
                 </li>
 
-                <li><a href="background/SpaceMan.jpg"><img class="foto" src="background/SpaceMan.jpg"
+                <li><a href="background/SpaceMan.jpg" target="_blank"><img class="foto" src="background/SpaceMan.jpg"
                             alt="Astronauta na lua" /></a>
                     <p>Um pequeno passo para o homem mas um grande passo para a humanidade.</p>
                 </li>
