--- a/direitos.html
+++ b/direitos.html
@@ -19,10 +19,33 @@
     </header>
 
     <div class="container">
-        <div class="copyright">
-            <p>Todo conteúdo desta página ou qualquer parte dele não poderá ser usado de forma alguma para fins comerciais
-                sem autorização expressa, do autor ou editor, exceto para uso pessoal ou acadêmico.</p>
+        <div class="permitido">
+            <h2>O que é permitido?</h2>
+            <br>
+            <i class="fas fa-check-double"></i><span>Baixar e modificar as imagens.</span>
+
+            <div class="npermitido">
+
+                <h2>O que não é permitido?</h2>
+                <br>
+                <i class="far fa-times-circle"></i><span>Usar as imagens para fins comerciais sem autorização do autor.
+                </span>
+                <br>
+                <i class="far fa-times-circle"></i><span>Usar as imagens de maneiras que possam ser consideradas
+                    ofensivas.</span>
+                <br>
+                <i class="far fa-times-circle"></i><span>Esta página foi criada do zero, portando não é permitido a
+                    reprodução sem autorização.</span>
+
+            </div>
+
+            <div class="lembrete"><i class="fas fa-brain"></i><span>Lembrando que algumas das fotos usadas neste site
+                    foram criadas a partir de conteúdo de terceiros.
+                    <br>
+                    Para saber mais confira os <a href="#">Agradecimentos.</a></span></div>
         </div>
+
+
     </div>
 
     <footer>
