--- a/index.html
+++ b/index.html
@@ -52,15 +52,11 @@
                     <h1>Sejam bem-vindos ao universo da imaginação<span class="barra">!</span></h1>
                 </div>
             </div>
-
-            </div>
         </section>
     </header>
 
-    </div>
-
     <div class="destaque">
-        <span>Fotos em destaque</span>    
+        <span>Fotos em destaque</span>
     </div>
 
     <!--Começo da galeria de imagens-->
@@ -91,14 +87,14 @@
                     <p>Apreciando a vista da janela mais alta de Hogwarts</p>
                 </li>
 
-                <li><a href="background/magicselect.jpg" target="_blank"><img class="foto" src="background/magicselect.jpg"
-                            alt="image" /></a>
+                <li><a href="background/magicselect.jpg" target="_blank"><img class="foto"
+                            src="background/magicselect.jpg" alt="image" /></a>
                     <p>Crianças, a ficção é a verdade dentro da mentira, e a verdade desta ficção é bem simples: a magia
                         existe.</p>
                 </li>
 
-                <li><a href="background/skate-mar-aberto.jpg" target="_blank"><img class="foto" src="background/skate-mar-aberto.jpg"
-                            alt="Andando de skate no mar" /></a>
+                <li><a href="background/skate-mar-aberto.jpg" target="_blank"><img class="foto"
+                            src="background/skate-mar-aberto.jpg" alt="Andando de skate no mar" /></a>
                     <p>Skate é criatividade.</p>
                 </li>
 
