--- a/sobre.html
+++ b/sobre.html
@@ -26,7 +26,7 @@
         <div class="box-principal-autor">
             <div class="box-sobre-autor">
 
-                <img class="minhafoto" src="sobre-fotos/me.jpg">
+                <img class="minhafoto" src="sobre-fotos/me.jpg" alt="foto do autor" title="Carlos Eduardo. Junior Front And e design">
                 <p>Para começar este breve resumo, gostaria de me apresentar.
                     <br>
                     Eu me chamo Carlos Eduardo, Moro na cidade do Rio de Janeiro, tenho 24 anos e sou
@@ -70,7 +70,7 @@
         <div class="rodape">
             <span>Feito com <i class="fas fa-heart"></i> por Carlos
                 Eduardo ©
-                2020</span>
+                2020. Todos os direitos reservados.</span>
         </div>
     </footer>
 
