--- a/direitos.html
+++ b/direitos.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/direitos.css">
     <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="js/index.js"></script>
 
 <body>
     <header>
@@ -22,7 +24,7 @@
         <div class="permitido">
             <h2>O que é permitido?</h2>
             <br>
-            <i class="fas fa-check-double"></i><span>Baixar e modificar as imagens.</span>
+            <i class="fas fa-check-double"></i><span>Baixar, compartilhar e modificar as imagens.</span>
 
             <div class="npermitido">
 
@@ -34,15 +36,15 @@
                 <i class="far fa-times-circle"></i><span>Usar as imagens de maneiras que possam ser consideradas
                     ofensivas.</span>
                 <br>
-                <i class="far fa-times-circle"></i><span>Esta página foi criada do zero, portando não é permitido a
-                    reprodução sem autorização.</span>
+                <i class="far fa-times-circle"></i><span>Esta página foi criada do zero, portando não é permitido a sua
+                    reprodução sem autorização do autor.</span>
 
             </div>
 
             <div class="lembrete"><i class="fas fa-brain"></i><span>Lembrando que algumas das fotos usadas neste site
                     foram criadas a partir de conteúdo de terceiros.
                     <br>
-                    Para saber mais confira os <a href="#">Agradecimentos.</a></span></div>
+                    Para saber mais confira os <a href="agradecimentos.html">Agradecimentos.</a></span></div>
         </div>
 
 
@@ -51,8 +53,8 @@
     <footer>
         <div class="rodape">
             <span>Feito com <i class="fas fa-heart"></i> por Carlos
-                Eduardo ©
-                2020</span>
+                Eduardo © 
+                2020.  Todos os direitos reservados.</span>
         </div>
     </footer>
 
