correção de menu mobile

--- a/agradecimentos.html
+++ b/agradecimentos.html
@@ -28,22 +28,22 @@
         <ul class="lista">
             <li>Meltys-stock
                 <br>
-                Artista por <a href="https://www.deviantart.com/meltys-stock/gallery"> deviant art</a>
-            </li>
-            <br>
-            <li>Kelly Lacy
-                <br>
-                artista por <a href="https://www.pexels.com/pt-br/@kelly-lacy-1179532">pexels</a>
-            </li>
-            <br>
-            <li>Annie Spratt
-                <br>
-                artista por <a href="https://unsplash.com/@anniespratt">pexels</a>
+                Artista por <a href="https://www.deviantart.com/meltys-stock/gallery" target="_blank"> deviant art</a>
             </li>
             <br>
             <li>lumibear
                 <br>
-                artista por <a href="https://www.deviantart.com/lumibear">deviant</a>
+                artista por <a href="https://www.deviantart.com/lumibear" target="_blank">deviant</a>
+            </li>
+            <br>
+            <li>CamaroGirl666
+                <br>
+                artista por <a href="https://www.deviantart.com/camarogirl666/favourites/12112346/model-stocks" target="_blank">deviant</a>
+            </li>
+            <br>
+            <li>Rowan Heuvel
+                <br>
+                artista por <a href="https://unsplash.com/@insolitus" target="_blank">unsplash</a>
             </li>
         </ul>
     </div>
