--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
 
     <script>
-        /*exibir mensagem e carregando*/
+        /*exibir mensagem de carregando*/
         window.onload = function () {
             document.getElementById('conteudo').style.display = "block";
             setTimeout(function () {
@@ -135,6 +135,14 @@
                     <span>Foto por ...</span>
                 </div>
             </li>
+
+            <li><a href="background/blur.jpg" target="_blank"><img class="foto" src="background/blur.jpg"
+                alt="Fotógrafo" /></a>
+        <p>A fotografia é uma das poucas coisas que tem poder sobre o tempo: ela o paralisa.</p>
+        <div class="autor-foto">
+            <span>Foto por ...</span>
+        </div>
+    </li>
 
         </ul>
     </div>
