--- a/agradecimentos.html
+++ b/agradecimentos.html
@@ -38,7 +38,8 @@
             <br>
             <li>CamaroGirl666
                 <br>
-                artista por <a href="https://www.deviantart.com/camarogirl666/favourites/12112346/model-stocks" target="_blank">deviant</a>
+                artista por <a href="https://www.deviantart.com/camarogirl666/favourites/12112346/model-stocks"
+                    target="_blank">deviant</a>
             </li>
             <br>
             <li>Rowan Heuvel
@@ -53,7 +54,7 @@
         <div class="rodape">
             <span>Feito com <i class="fas fa-heart"></i> por Carlos
                 Eduardo ©
-                2020.  Todos os direitos reservados.</span>
+                2020. Todos os direitos reservados.</span>
         </div>
     </footer>
 </body>
