--- a/animais.html
+++ b/animais.html
@@ -4,7 +4,7 @@
 <head>
     <title>CoffeeBreak</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/coffeebreak.css" type="text/css">
+    <link rel="stylesheet" href="css/animais.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="logos/mug_coffee.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/cbd12f7b72.js" crossorigin="anonymous"></script>
@@ -23,8 +23,8 @@
             <ul class="menu">
                 <li class="linhas-menu"><a href="#galeria">Galeria</a>
                     <ul>
-                        <li><a href="">Paisagens</a></li>
-                        <li><a href="animais.html">Animais</a></li>
+                        <li><a href="#">Paisagens</a></li>
+                        <li><a href="#">Animais</a></li>
                         <li><a href="#">Objetos</a></li>
                         <li><a href="#">Fantasia</a></li>
                     </ul>
@@ -43,7 +43,7 @@
                     <li onclick="mudar2()">galeria<i class="fas fa-angle-down"></i>
                         <ul class="subGaleria">
                             <li><a href="#">Paisagens</a></li>
-                            <li><a href="animais.html">Animais</a></li>
+                            <li><a href="#">Animais</a></li>
                             <li><a href="#">Objetos</a></li>
                             <li><a href="#">Fantasia</a></li>
                         </ul>
@@ -51,19 +51,7 @@
                 </ul>
             </ul>
         </div>
-        <div class="subcabecalho">
-            <div class="conteudo-subcabecalho">
-                <h1>Sejam bem-vindos ao universo da imaginação<span class="barra">!</span></h1>
-                <h4>Imagens espetaculares criadas de artistas para artistas.</h4>
-            </div>
-            <div class="autor">
-                <span>Foto por <a href="https://unsplash.com/@scheier" target="_blank">@scheier</a></span>
-            </div>
-        </div>
     </header>
-    <div class="destaque">
-        <span>Fotos em destaque</span>
-    </div>
     <!--Começo da galeria de imagens-->
     <div id="galeria" class="container-galeria">
         <ul class="galeria">
